--- a/index.html
+++ b/index.html
@@ -1,75 +1,120 @@
-[17:48, 28/1/2026] Expert: <!doctype html>
+<!doctype html>
 <html lang="hi">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Experts Stock Market</title>
   <style>
-    body{margin:0;font-family:system-ui,Arial;min-height:100vh;display:flex;align-items:center;justify-content:center;background:#f6f7fb;}
-    .card{width:min(620px,92vw);background:#fff;border-radius:18px;padding:26px;box-shadow:0 10px 30px rgba(0,0,0,.08);text-align:center;}
-    .logo{width:120px;height:120px;object-fit:cover;border-radius:18px;margin:6px auto 14px;display:block;box-shadow:0 8px 20px rgba(0,0,0,.10);}
-    h1{margin:0 0 8px;font-size:26px;}
-    .tag{margin:0 0 14px;color:#333;line-height:1.55;font-weight:600;}
-    .points{max-width:480px;margin:14px auto 18px;text-align:left;color:#333;line-height:1.65;}
-    .points li{margin:6px 0;}
-    a.btn{display:inline-block;padding:14px 22px;border-radius:14px;text-decoration:none;font-weight:800;background:#111;color:#fff;}
-    .small{margin-top:12px;font-size:13px;color:#666;}
-    .note{font-size:12px;color:#777;margin-top:10px;}
+    :root{
+      --bg1:#05070d;
+      --bg2:#0b1220;
+      --card:#0f172a;
+      --text:#e5e7eb;
+      --muted:#a5b4fc;
+      --muted2:#94a3b8;
+      --btn:#2563eb;
+      --btn2:#1d4ed8;
+      --border:rgba(255,255,255,.08);
+    }
+
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family:system-ui,Arial;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:18px;
+      background: radial-gradient(1200px 600px at 20% 10%, #0b2a6f33, transparent),
+                  radial-gradient(900px 500px at 90% 30%, #1d4ed833, transparent),
+                  linear-gradient(180deg,var(--bg1),var(--bg2));
+      color:var(--text);
+    }
+
+    .card{
+      width:100%;
+      max-width:520px;
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      border:1px solid var(--border);
+      border-radius:18px;
+      padding:22px;
+      box-shadow:0 20px 50px rgba(0,0,0,.45);
+      text-align:center;
+    }
+
+    .logo{
+      width:120px;
+      height:120px;
+      object-fit:cover;
+      border-radius:999px;
+      border:4px solid rgba(255,255,255,.12);
+      background:rgba(255,255,255,.06);
+      display:block;
+      margin:0 auto 14px;
+    }
+
+    h1{margin:0 0 8px;font-size:30px;letter-spacing:.2px}
+    .tag{margin:0 0 14px;color:var(--muted2);line-height:1.5;font-weight:600}
+
+    .points{
+      margin:14px 0 18px;
+      padding:0;
+      list-style:none;
+      display:grid;
+      gap:10px;
+      text-align:left;
+    }
+    .points li{
+      background:rgba(255,255,255,.06);
+      border:1px solid var(--border);
+      border-radius:14px;
+      padding:12px 14px;
+      color:var(--text);
+      line-height:1.4;
+      font-weight:600;
+    }
+
+    .btn{
+      display:inline-block;
+      width:100%;
+      max-width:320px;
+      padding:14px 18px;
+      border-radius:999px;
+      text-decoration:none;
+      font-weight:900;
+      background: linear-gradient(180deg, var(--btn), var(--btn2));
+      color:white;
+      border:1px solid rgba(255,255,255,.14);
+    }
+
+    .small{margin-top:12px;font-size:13px;color:var(--muted2)}
+    .note{margin-top:10px;font-size:12px;color:#9ca3af}
   </style>
 </head>
 <body>
   <div class="card">
 
-    <!-- Photo/Logo -->
+    <!-- logo file name MUST be exactly logo.jpg -->
     <img class="logo" src="logo.jpg" alt="Experts Logo" />
 
-    <h1>Experts Stock Market</h1>
-    <p class="tag">Research Based Guidance | Risk Management First</p>
+    <h1>Experts</h1>
+    <p class="tag">Daily Market Analysis • Trading Tips • WhatsApp Support</p>
 
     <ul class="points">
-      <li>Daily Market View + Key Levels (Nifty/BankNifty)</li>
-      <li>High-Probability Stock Setups (Delivery / Intraday)</li>
-      <li>Proper Stoploss + Target Planning (No Guessing)</li>
-      <li>Beginner to Advanced Support</li>
+      <li>📌 Daily Market View + Key Levels (Nifty/BankNifty)</li>
+      <li>📈 High-Probability Stock Setups (Delivery / Intraday)</li>
+      <li>🛡️ Proper Stoploss + Target Planning (No Guessing)</li>
+      <li>🎯 Beginner to Advanced Support</li>
     </ul>
 
     <a class="btn"
-       href="https://wa.me/918153880235?text=Hello%20Experts%2C%20mujhe%20stock%20market%20guidance%20chahiye."
+       href="https://api.whatsapp.com/send?phone=918153880235&text=Hello%20Experts%2C%20mujhe%20stock%20market%20guidance%20chahiye"
        target="_blank" rel="noopener">
       Start Now (WhatsApp)
     </a>
 
     <div class="small">Click → WhatsApp open ✅</div>
-    <div class="note">Disclaimer: Market risk hai. Profit guarantee nahi hoti.</div>
-  </div>
-</body>
-</html>
-[18:00, 28/1/2026] Expert: <!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Experts</title>
-  <style>
-    body{margin:0;font-family:system-ui,Arial;min-height:100vh;display:flex;align-items:center;justify-content:center;background:#0b0f14;color:#fff;}
-    .card{width:min(560px,92vw);background:#121826;border-radius:18px;padding:26px;box-shadow:0 10px 30px rgba(0,0,0,.35);text-align:center;}
-    h1{margin:0 0 10px;font-size:28px;}
-    p{margin:0 0 18px;color:#cbd5e1;line-height:1.6;}
-    a.btn{display:inline-block;padding:14px 22px;border-radius:14px;text-decoration:none;font-weight:800;background:#1e88ff;color:#fff;}
-    .note{margin-top:14px;font-size:12px;color:#93a4b8;}
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>Experts</h1>
-    <p>Daily Market Analysis • Trading Tips • WhatsApp Support</p>
-
-    <a class="btn"
-      href="https://api.whatsapp.com/send?phone=918153880235&text=Hello%20Experts%2C%20mujhe%20stock%20market%20guidance%20chahiye"
-      target="_blank" rel="noopener">
-      Start Now (WhatsApp)
-    </a>
-
     <div class="note">Disclaimer: Market risk hai. Profit guarantee nahi hoti.</div>
   </div>
 </body>
